--- a/index.html
+++ b/index.html
@@ -4,19 +4,35 @@
     <meta charset="utf-8">
     <meta name="author" contents="Joono Aspdosa">
     <meta name="description" contents="Welcome to my Kakao Clone">
-    <title>This is my title</title>
+    <title>Box Model</title>
   </head>
-  <body>
-    <section>
-      <header id="headerNumberOne" class="defaultHeader">
-        <h1>Title of a section</h1>
-      </header>
-    </section>
+  <style>
 
-    <div>
-      <header id="differentHeader" class="defaultHeader">
-        Title of the unknown container
-      </header>
+    body,html{
+      padding:0;
+      margin:0;
+      background-color:green;
+      height:100%;
+    }
+
+    .box{
+      background-color:yellow;
+      width:50%;
+      height:50%;
+      padding:20px 10px 5px 2px;
+    }
+
+    .inside-box{
+      background-color:blue;
+      width:50%;
+      height:50%;
+    }
+
+  </style>
+  <body>
+    <div class="box">
+      <div class="inside-box"></div>
     </div>
+    
   </body>
 </html>
