--- a/06.selectors/index.html
+++ b/06.selectors/index.html
@@ -5,14 +5,20 @@
         Selectors and Pseudo Selectors
     </title>
     <style>
-      input[type="submit"]{
+      input[required="required"]{
           background-color: red;
-      }
-      input[type="password"]{
-          background-color: blue;
       }
       input{
           border:1px solid yellow;
+      }
+      .box{
+          background-color:green;
+          display: block;
+          height: 100px;
+          border: 1px solid black;
+      }
+      .box:last-child{
+          background-color:pink;
       }
     </style>
   </head>
@@ -21,8 +27,8 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box">
-        <input type="password" required>
-        <input type="submit">
+        <input type="password" required="required">
+        <input type="submit" required="required">
       </div>
     </div>
 
