--- a/06.selectors/index.html
+++ b/06.selectors/index.html
@@ -20,10 +20,37 @@
       .box:last-child{
           background-color:pink;
       }
+      .box:first-child{
+          background-color:aqua;
+      }
+      .box:nth-child(2){
+          background-color:gray;
+      }
+      .box:nth-child(2n){
+          background-color:gray;
+      }
+      .box:nth-child(2n+1){
+          background-color:magenta;
+      }
+      .container > .box{
+          background-color:yellow;
+      }
+      .child{
+          background-color:purple;
+          width:40px;
+      }
     </style>
   </head>
   <body>
     <div class="containers">
+      <div class="box">
+        <div class="box child"></div>
+      </div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
       <div class="box">
