--- a/06.selectors/index.html
+++ b/06.selectors/index.html
@@ -11,32 +11,19 @@
       input{
           border:1px solid yellow;
       }
+      .containers > .box{
+          background-color:yellow;
+      }
+      .box{
+          border:1px solid yellow;
+      }
       .box{
           background-color:green;
           display: block;
           height: 100px;
           border: 1px solid black;
-      }
-      .box:last-child{
-          background-color:pink;
-      }
-      .box:first-child{
-          background-color:aqua;
-      }
-      .box:nth-child(2){
-          background-color:gray;
-      }
-      .box:nth-child(2n){
-          background-color:gray;
-      }
-      .box:nth-child(2n+1){
-          background-color:magenta;
-      }
-      .container > .box{
-          background-color:yellow;
-      }
+      }    
       .child{
-          background-color:purple;
           width:40px;
       }
     </style>
