--- a/06.selectors/index.html
+++ b/06.selectors/index.html
@@ -1,49 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-        Selectors and Pseudo Selectors
-    </title>
+    <title>Css States</title>
     <style>
-      input[required="required"]{
+      .box{
           background-color: red;
-      }
-      input{
-          border:1px solid yellow;
-      }
-      .containers > .box{
-          background-color:yellow;
-      }
-      .box{
-          border:1px solid yellow;
-      }
-      .box{
-          background-color:green;
-          display: block;
-          height: 100px;
-          border: 1px solid black;
-      }    
-      .child{
-          width:40px;
       }
     </style>
   </head>
   <body>
-    <div class="containers">
-      <div class="box">
-        <div class="box child"></div>
-      </div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box">
-        <input type="password" required="required">
-        <input type="submit" required="required">
-      </div>
+    <div class="box">
+      
     </div>
 
   </body>
