--- a/08.css-state/index.html
+++ b/08.css-state/index.html
@@ -13,12 +13,15 @@
       .box:active{
           background-color: green;
       }
+      .box:focus{
+          background-color: blue;
+      }
     </style>
   </head>
   <body>
-    <span class="box">
+    <textarea class="box">
       lalalalala
-    </span>
+    </textarea>
 
   </body>
 </html>
