--- a/09.transitions/index.html
+++ b/09.transitions/index.html
@@ -8,7 +8,7 @@
           color:white;
           transition:all 0.5s ease-in-out; 
       }
-      .box:hover{
+      .box:active{
           background-color: red;
           color:blue;
       }
