--- a/11.animations/index.html
+++ b/11.animations/index.html
@@ -7,21 +7,27 @@
           width:500px;
           height:500px;
           background: red;
-          animation: 1.5s scaleAndRotateSquare infinite ease-in-out;
+          font-size:40px; 
+          animation: 5s scaleAndRotateSquare infinite ease-in-out;
       }
       @keyframes scaleAndRotateSquare{
-          from{
+          0%{
               transform:none;
           }
-          to{
+          50%{
               transform: rotate(1turn) scale(.5,.5);
+              color: white;
+          }
+          100%{
+              transform:none;
+              color:blue
           }
       }
     </style>
   </head>
   <body>
     <div class="box">
-      
+      joono
     </div>
 
   </body>
